# lms_system_project

./: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
config/: celery.py  settings.py  urls.py
lms/: admin.py  models.py  paginators.py  serializer.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_coursesubscription.py  0004_course_updated_at.py
users/: admin.py  models.py  permissions.py  serializer.py  services.py  urls.py  validators.py  views.py
users/fixtures/: payments.json
users/management/commands/: addmoderator.py  create_moderator_group.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_payments_link_payments_session_id_and_more.py  0004_payments_payment_status.py
